WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104610
REGRESSION: Using the Exit Full Screen button in the menu bar to exit HTML5 / media full screen breaks Safari windows
https://bugs.webkit.org/show_bug.cgi?id=104610
Summary
REGRESSION: Using the Exit Full Screen button in the menu bar to exit HTML5 /...
Jer Noble
Reported
2012-12-10 16:20:22 PST
REGRESSION: Using the Exit Full Screen button in the menu bar to exit HTML5 / media full screen breaks Safari windows
Attachments
Patch
(2.01 KB, patch)
2012-12-10 16:28 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2012-12-10 16:28:29 PST
Created
attachment 178666
[details]
Patch
WebKit Review Bot
Comment 2
2012-12-18 13:29:26 PST
Comment on
attachment 178666
[details]
Patch Clearing flags on attachment: 178666 Committed
r138062
: <
http://trac.webkit.org/changeset/138062
>
WebKit Review Bot
Comment 3
2012-12-18 13:29:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug