REGRESSION: Using the Exit Full Screen button in the menu bar to exit HTML5 / media full screen breaks Safari windows https://bugs.webkit.org/show_bug.cgi?id=104610

Reviewed by Anders Carlsson.

When a user clicks on the menu-bar exit fullscreen button, that skips notifying the document that
the window is exiting fullscreen and tearing down the placeholder. Manually call that part of the code
when we detect that it has been skipped.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController _startExitFullScreenAnimationWithDuration:]):


Canonical link: https://commits.webkit.org/123566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138062 268f45cc-cd09-0410-ab3c-d52691b4dbfc